--- a/style.css
+++ b/style.css
@@ -275,6 +275,151 @@ a, p, span, div, section, ul, li, ol{
 /* ====================== Header css ends ========================= */
 
 
+/* ====================== Hero css starts ========================= */
+.job_search_hero_main{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 450px;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 2;
+}
+.hero_content{
+    width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+.hero_content .hero_header h2{
+    color: #fff;
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
+    text-shadow: 3px 3px 25px #000;
+}
+.hero_content .hero_header h3{
+    color: #fff;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+    text-shadow: 3px 3px 25px #000;
+    margin-top: -12px;
+}
+.hero_job_search{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+.input_item{
+    display: flex;
+    background: #fff;
+    width: fit-content;
+    align-items: center;
+}
+.input_item .icon{
+    padding: 10px;
+}
+.input_item img{
+    height: 24px;
+}
+.input_item .inp_itm{
+    height: 40px;
+    width: 140px;
+    border: none;
+    margin-right: 10px;
+    font-family: var(--font-type-one);
+    font-size: var(--font-size-small);
+}
+.input_item .inp_itm::placeholder{
+    font-family: var(--font-type-one);
+    font-size: var(--font-size-small);
+}
+.input_item select{
+    color: #666;
+}
+.input_item .inp_itm:focus{
+    border: none;
+    outline: none;
+}
+.find_jobs_button a{
+    background: var(--primary-color);
+    color: #fff;
+    text-decoration: none;
+    padding: 12px 24px;
+}
+.advanced_search{
+    display: none;
+}
+.job_search_hero_main_text{
+    display: none;
+}
+@media screen and (max-width: 1200px){
+    .job_search_hero_main{
+        top: 320px;
+        transform: translate(-50%);
+    }
+    .hero_content{
+        width: 780px;
+    }
+}
+@media screen and (max-width: 992px){
+    .job_search_hero_main{
+        top: 280px;
+        transform: translate(-50%);
+    }
+    .hero_content{
+        width: 100vw;
+    }
+}
+@media screen and (max-width: 768px){
+    .job_search_hero_main_text{
+        display: flex;
+        position: absolute;
+        top: 280px;
+        left: 50%;
+        transform: translate(-50%);
+        z-index: 2;
+    }
+    .job_search_hero_main .hero_header{
+        display: none;
+    }
+    .hero_job_search .item_small_hide{
+        display: none;
+    }
+    .hero_content .hero_header h2{
+        font-size: 32px;
+    }
+    .hero_content .hero_header h3{
+        font-size: 24px;
+    }
+    .job_search_hero_main{
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: 0;
+        background: var(--primary-color);
+        padding-bottom: 20px;
+    }
+}
+@media screen and (max-width: 576px){
+    .job_search_hero_main_text{
+        display: flex;
+        position: absolute;
+        top: 240px;
+        left: 50%;
+        transform: translate(-50%);
+        z-index: 2;
+    }
+    .hero_content .hero_header h2{
+        font-size: 28px;
+    }
+    .hero_content .hero_header h3{
+        font-size: 20px;
+    }
+}
+/* ====================== Hero css ends ========================= */
+
 
 /* ====================== Services css starts ========================= */
 .service_item{
