--- a/style.css
+++ b/style.css
@@ -360,6 +360,9 @@ a, p, span, div, section, ul, li, ol{
 .job_search_hero_main_text{
     display: none;
 }
+.find_job_btn_item{
+    background: transparent;
+}
 @media screen and (max-width: 1200px){
     .hero_content{
         width: 780px;
@@ -371,6 +374,11 @@ a, p, span, div, section, ul, li, ol{
     }
 }
 @media screen and (max-width: 768px){
+    .find_jobs_button a{
+        background: transparent;
+        border: 2px solid var(--primary-light-color);
+        border-radius: 2px;
+    }
     .job_search_hero_main_text{
         display: flex;
         position: absolute;
