--- a/style.css
+++ b/style.css
@@ -1216,41 +1216,111 @@ background: #ECECEC;
     display: flex;
     align-items: center;
 }
+.about_intro p{
+    font-family: var(--font-type-one);
+    font-size: var(--font-size-medium);
+    color: var(--text-color-dark);
+}
+.about_item1 p{
+    padding-right: 40px;
+}
 
 .our_story_section{
-    background: #F6F6F6;
     position: relative;
+    margin-bottom: 60px;
+}
+.story_wrap{
+    background: #F6F6F6;
+    width: calc(100% - 380px);
+    padding-right: 180px;
+}
+.story_left{
+    padding-left: 16vw;
+}
+.story_left p{
+    font-family: var(--font-type-one);
+    font-size: var(--font-size-medium);
+    color: var(--text-color-dark);
 }
 .story_image{
     height: 100%;
-    background: #fff;
     position: absolute;
     right: 0px;
     z-index: 2;
-    top: 0;
+    bottom: -80px;
     display: flex;
     align-items: center;
 }
-/* .story_image .image{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-} */
-.story_left{
-padding-right: 80px;
+.story_image img{
+    max-height: 380px;
 }
 .story_left p{
     margin-top: 25px;
 }
 .accredation_row2{
-   margin-top: 50px;
+   margin-top: 40px;
 }
 .accredation_row2 .accredation_item{
     display: flex;
     justify-content: flex-start;
 }
 .accredation_row2 .accredation_item img{ 
-    max-height: 100px;
+    max-height: 90px;
 }
 
-
+@media screen and (max-width: 1600px){
+.story_left{
+    padding-left: 10vw;
+}
+}
+@media screen and (max-width: 1420px){
+    .story_left{
+        padding-left: 5vw;
+    }
+}
+@media screen and (max-width: 1400px){
+    .story_left{
+        padding-left: 8vw;
+    }
+}
+@media screen and (max-width: 1300px){
+    .story_left{
+        padding-left: 6vw;
+    }
+}
+@media screen and (max-width: 992px){
+    .story_left{
+        padding-left: 140px;
+        padding-right: 140px;
+    }
+    .story_wrap{
+        width: 100%;
+        padding-right: 0px;
+    }
+    .story_image{
+        height: 100%;
+        position: relative;
+        bottom: 0px;
+        display: flex;
+        align-items: center;
+    }
+    .story_image img{
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
+@media screen and (max-width: 992px){
+    .story_left{
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+}
+@media screen and (max-width: 576px){
+    .story_left{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .our_story_section{
+        margin-bottom: 40px;
+    }
+}
