--- a/style.css
+++ b/style.css
@@ -1220,6 +1220,7 @@ background: #ECECEC;
     font-family: var(--font-type-one);
     font-size: var(--font-size-medium);
     color: var(--text-color-dark);
+    line-height: 20px;
 }
 .about_item1 p{
     padding-right: 40px;
@@ -1403,4 +1404,62 @@ background: #ECECEC;
 ==================================================================================== */
 
 
-
+/* =================  Wor holiday Page css starts  ================================= 
+==================================================================================== */
+.work_holiday_text p{
+    font-family: var(--font-type-one);
+    font-size: var(--font-size-medium);
+    color: var(--text-dark-color);
+    line-height: 20px;
+}
+.small_cta_row{
+    background: var(--primary-color);
+    padding: 15px;
+    border-radius: 6px;
+}
+.small_cta_row .text_left{
+    display: flex;
+    align-items: center;
+}
+.small_cta_row p{
+    font-family: var(--font-type-one);
+    font-size: var(--font-size-medium);
+    color:#fff;
+}
+.small_cta_row .call_button{
+    display: flex;
+    justify-content: flex-end;
+}
+.small_cta_row .call_button a{
+    font-family: var(--font-type-one);
+    font-size: var(--font-size-medium);
+    color:#fff;
+    text-decoration: none;
+    border: 1px solid #fff;
+    padding: 8px 25px;
+}
+.small_cta_row .call_button a:hover{
+    color:#ddd;
+    border: 1px solid #ddd;
+}
+@media screen and (max-width: 992px){
+    .intro_2{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .intro_2 .image{
+        margin-top: 30px;
+    }
+}
+@media screen and (max-width: 768px){
+    .small_cta_row p{
+        text-align: center;
+    }
+    .small_cta_row .call_button{
+        margin-top: 10px;
+        justify-content: center;
+    }
+    .small_cta_row{
+        margin: 0 5px;
+    }
+}
